...
"bio_auth_use_pin" = "Use PIN";
"bio_auth_failed" = "User authentication has failed";
"reader_auth_verifier_anonymous" = "Anonymous verifier is requesting the following information";
"reader_auth_verifier_trusted_with_name" = "Trusted verifier \"%1$s\" is requesting the following information";
"reader_auth_verifier_untrusted_with_name" = "Untrusted verifier \"%1$s\" is requesting the following information";
"no_documents" = "No documents";
"add_sample_documents" = "Add sample documents";
"start_by_adding_sample_documents" = "Start by adding sample documents";
"connection_mdoc_open" = "Connection to mdoc verifier is open";
"connection_mdoc_closed" = "Connection to mdoc verifier is closed";
"txt_documents_sent" = "%d request(s) served";
"delete" = "delete";

